fixed profile cards (headers align to left)

--- a/apps/frontend/src/css/profile_page.css
+++ b/apps/frontend/src/css/profile_page.css
@@ -32,6 +32,14 @@
     border-radius: 15px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     padding-top: 5%;
+}
+
+.profile-card-info {
+    align-self: center;
+}
+
+.profile-card-reqlist {
+    margin-left: 10%;
 }
